# streamKeying

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: fg_bg_segmentator.hpp  sequence_generator.hpp  stream_keying.hpp  utils.hpp
include/keyers/: keyer_base.hpp  keyer_dnn.hpp  keyer_svm.hpp
src/: main.cpp
